Spring Boot 3 migration